--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </div>
 
     <footer>{Direitos Autorais}</footer>
-    <script src="JS/tingle.min.js" charset="utf-8"></script>
-    <script src="JS/script.js" charset="utf-8"></script>
+    <script src="../modal/tingle.min.js" charset="utf-8"></script>
+    <script src="../modal/script.js" charset="utf-8"></script>
 </body>
 
 </html>
