--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <footer>{Direitos Autorais}</footer>
     <script src="../modal/tingle.min.js" charset="utf-8"></script>
-    <script src="../modal/script.js" charset="utf-8"></script>
+    <script src="JS/script.js" charset="utf-8"></script>
 </body>
 
 </html>
